--- a/as2.html
+++ b/as2.html
@@ -1,1 +1,75 @@
-create
+
+
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head><title>
+  Webzai
+</title><link href='http://az388832.vo.msecnd.net/201305250102158157/webzai-pages-templates-viewer/webzai-pages-templates-viewer.css' rel='stylesheet' type='text/css' />
+<script src='http://az388832.vo.msecnd.net/201305250102158157/webzai-pages-templates-viewer/webzai-pages-templates-viewer-templates.js' type='text/javascript'></script>
+<script src='http://az388832.vo.msecnd.net/201305250102158157/webzai-pages-templates-viewer/webzai-pages-templates-viewer.js' type='text/javascript'></script>
+
+<script type="text/javascript">
+    WebzaiController.initialize({
+        currentUser: null,
+        siteDomain: "www.webzai.com",
+        sitePort: 80,
+        developmentMode: false
+    });
+</script><link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700" rel="stylesheet" type="text/css" /><link href="http://fonts.googleapis.com/css?family=Arimo:400,700" rel="stylesheet" type="text/css" />
+
+    <script type="text/javascript">
+        var PageData = {"categories":[{"id":1,"name":"blank","title":"Blank"},{"id":2,"name":"themes","title":"Themes"},{"id":3,"name":"all","title":"All"},{"id":4,"name":"business","title":"Business"},{"id":5,"name":"portfolios","title":"Portfolios"},{"id":6,"name":"consultant","title":"Consultant"},{"id":8,"name":"lifestyle","title":"Lifestyle"},{"id":9,"name":"photography_and_art","title":"Photography & Art"},{"id":10,"name":"food_and_drinks","title":"Food & Drinks"},{"id":11,"name":"education","title":"Education"},{"id":12,"name":"music_and_dance","title":"Music & Dance"},{"id":13,"name":"night_life","title":"Night Life"},{"id":14,"name":"wedding","title":"Wedding"},{"id":15,"name":"design","title":"Design"},{"id":16,"name":"architecture_and_real estate","title":"Architecture & Real Estate"},{"id":17,"name":"cars_and_transportation","title":"Cars & Transportation"},{"id":18,"name":"beauty_and_fashion","title":"Beauty & Fashion"},{"id":19,"name":"computers_and_technology","title":"Computers & Technology"},{"id":22,"name":"hotels_and_travel","title":"Hotels & Travel"}]};
+        var Settings = {
+           siteDomain: "www.webzai.com",
+           sitePort: 80,
+           developmentMode: false
+       };
+
+	  var _gaq = _gaq || [];
+      _gaq.push(['_setAccount', 'UA-34864826-1']);
+      _gaq.push(['_setDomainName', 'webzai.com']);
+	  _gaq.push(['_trackPageview']);
+
+	  (function() {
+		var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    	ga.src = ('https:' == document.location.protocol ? 'https://' : 'http://') + 'stats.g.doubleclick.net/dc.js';
+		var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+	  })();
+
+
+    </script>
+</head>
+<body>
+    <div id="upper-section" class="not-initialized">
+        <div id="navigation-bar">
+            <span class="height-normalizer"></span><!--
+         --><a href="/" class="image-sprite-logo vertically-centered"></a><!--
+         --><span id="categories-combo-box" class="vertically-centered"></span><!--
+         --><span id="templates-navigation">
+                <span id="prev-template-button" class="image-sprite-prev-template vertically-centered"></span><!--
+             --><span id="templates-navigation-status" class="vertically-centered"></span><!--
+             --><span id="next-template-button" class="image-sprite-next-template sprite-next-template vertically-centered"></span>
+            </span>
+            <span id="navigation-bar-right" class="right-block">
+                <span class="height-normalizer"></span><!--
+             --><a id="edit-site-button" href="#" target="_blank" class="button-type-25 orange vertically-centered">Edit</a><!--
+             --><span id="site-types-separator" class="webzai-templates-viewer-icon sprite-separator vertically-centered"></span><!--
+             --><span id="pc-type-button" class="image-sprite-pc site-type-button vertically-centered"></span><!--
+             --><span id="mobile-type-button" class="image-sprite-mobile site-type-button vertically-centered"></span>
+            </span>
+        </div>
+        <div id="upper-section-separator"></div>
+    </div>
+    <div id="site-container" >
+        <iframe id="site-iframe" frameborder="0" scrolling="yes" class="absolute-fill"></iframe>
+    </div>
+    <div id="site-overlay">
+        <div id="loading-panel">
+            <span class="height-normalizer"></span><!--
+         --><span id="loading-animation" class="vertically-centered"></span><!--
+         --><span class="loading-text vertically-centered">Loading Template...</span>
+        </div>
+    </div>
+</body>
+</html>
