--- a/as2.html
+++ b/as2.html
@@ -2,7 +2,10 @@ can u see me update?
 I can edit using the website not the app
 ok use it in the website one
 besife the files there is a tab call Branches
-create one branches for you and change your branch to ur create one and you can edit
+
+aya update
+can u see it???????
+
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 
 <html xmlns="http://www.w3.org/1999/xhtml">
