--- a/as2.html
+++ b/as2.html
@@ -7,7 +7,7 @@ aya update
 can u see it???????
 ya 
 i can see it now
-
+you need to change ur branch into aya inorder to edit
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 
 <html xmlns="http://www.w3.org/1999/xhtml">
