--- a/as2.html
+++ b/as2.html
@@ -8,6 +8,9 @@ can u see it???????
 ya 
 i can see it now
 you need to change ur branch into aya inorder to edit
+
+oh i see. i think i got it now. but yea, can only do it online, not in the app
+
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 
 <html xmlns="http://www.w3.org/1999/xhtml">
