--- a/as2.html
+++ b/as2.html
@@ -112,24 +112,24 @@
 	
 	<body>
 		<div id = "filter">
-		<p>Gender</p>
+		<p class = "filtertext">Gender &#160; &#160; &#160; &#160; &#160; &#160; &#160; &#160; &#160; &#160;Shape</p>
 		<tr>
 		<td ><input type="checkbox" class="femalecheck" name="case" checked="checked"/>female</input></td>
 		<td ><input type="checkbox" class="malecheck" name="case" checked="checked"/>male</input></td>
 		</tr>
-		<p>shape</p>
+							
 		<tr>
 		<td ><input type="checkbox" class="roundcheck" name="case" checked="checked"/>round</input></td>
 		<td ><input type="checkbox" class="rectanglecheck" name="case" checked="checked"/>rectangle</input></td>
 		<td ><input type="checkbox" class="cateyecheck" name="case" checked="checked"/>cateye</input></td>
 		</tr>
-		<p>Type</p>
+		<p class = "filtertext">Type</p>
 		<tr>
 		<td ><input type="checkbox" class="fullcheck" name="case" checked="checked"/>full frame</input></td>
 		<td ><input type="checkbox" class="semicheck" name="case" checked="checked"/>semi-rimless</input></td>
 		<td ><input type="checkbox" class="rimlesscheck" name="case" checked="checked"/>rimless</input></td>
 		</tr>
-		<p>Price</p>
+		<p class = "filtertext">Price</p>
 		<tr>
 		<td ><input type="checkbox" class="100check" name="case" checked="checked"/>under $100</input></td>
 		<td ><input type="checkbox" class="100200check" name="case" checked="checked"/>$100-$200</input></td>
@@ -140,64 +140,83 @@
 		<input type="button" value="Search" id="btn_search"/>
 		</div>
 		<div id ="male">
-			<ul>
-				<li>Helter Skelter Sunglasses</li>
-				<li>Anywhere Round Sunglasses</li>
-				<li>Super Duper Strength</li>
-			</ul>		
+					
 		</div>
 		<div id = product>
+		<div class = interproduct>
 		<div class = "femalecateyefull300">
+			<div class = interproduct>
 			<img src="img/female/cateye/full/300/Intergalactic-1301494_large.jpg" alt="sunglass" height="240" width="141.5"> 
 			<p class="textdescri" >
 				<span>Intergalactic Clear</span>
 			</p>
+			<img src="img/stars/5_star.png" alt="sunglass" height="22.75" width="122.75">(21)
+			
 			<p class="textprice" >
 				<span>$348</span>
 			</p>
+			</div>
+			
+			<div class = interproduct>
 			<img src="img/female/cateye/full/300/Intergalactic-1301495_large.jpg" alt="sunglass" height="240" width="141.5"> 
 			<p class="textdescri" >
 				<span>Intergalactic Crystal Pink</span>
 			</p>
+			<img src="img/stars/4_star.png" alt="sunglass" height="22.75" width="122.75">(28)
 			<p class="textprice" >
 				<span>$380</span>
 			</p>
+			</div>
 		</div>
 		
 		<div class = "femalecateyefull100200">
+			<div class = interproduct>
 			<img src="img/female/cateye/full/100200/SG_1_large.jpg" alt="sunglass" height="240" width="141.5"> 
 			<p class="textdescri" >
 				<span>Atomic Black</span>
 			</p>
+			<img src="img/stars/5_star.png" alt="sunglass" height="22.75" width="122.75">(21)
 			<p class="textprice" >
 				<span>$185</span>
 			</p>
+			</div>
+			
+			<div class = interproduct>
 			<img src="img/female/cateye/full/100200/SG_02_large.jpg" alt="sunglass" height="240" width="141.5"> 
 			<p class="textdescri" >
 				<span>Optimist Peach</span>
 			</p>
+			<img src="img/stars/3_star.png" alt="sunglass" height="22.75" width="122.75">(11)
 			<p class="textprice" >
 				<span>$150</span>
 			</p>
+			</div>
+			
 		</div>
 		
 		<div class = "femalecateyefull200300">
+		<div class = interproduct>
 			<img src="img/female/cateye/full/200300/Eclipse-1301501_large.jpg" alt="sunglass" height="240" width="141.5"> 
 			<p class="textdescri" >
 				<span>Eclipse Black</span>
 			</p>
+			<img src="img/stars/5_star.png" alt="sunglass" height="22.75" width="122.75">(81)
 			<p class="textprice" >
-				<span>$255</span>
+				<span>$255</span></p>
+		</div>
 			
 		</div>
 		
 		<div class = "femalecateyefull100">
+			<div class = interproduct>
 			<img src="img/female/cateye/full/uder100/anytime1_large.jpg" alt="sunglass" height="240" width="141.5"> 
 			<p class="textdescri" >
 				<span>Anytime Crazy Tortoise</span>
 			</p>
+			<img src="img/stars/3_star.png" alt="sunglass" height="22.75" width="122.75">(11)
 			<p class="textprice" >
-				<span>$55</span>
+				<span>$55</span></p>
+			</div>
 			
 		</div>
 		
